--- a/first assignment.html
+++ b/first assignment.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="first assignment.css">
 </head>
-<body>
-    <header>
 
+<body class="open-sans-unique">
+    <header class="banner-bg">
+        <nav>
+            <h3 class="inter-nav-logo text-color">LOGO</h3>
+            <ul>
+                <li><a href="button.com"><button class="Primary-btn">Sign up</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h3>
+            </div>
+            <a href="button.com"><button class="Primary-btn">Stay Focused</button></a>
+        </div>
     </header>
-
     <main>
 
     </main>
-
     <footer>
-        
-    </footer>
 
+    </footer>
 </body>
+
 </html>
