my third commit

--- a/first assignment.html
+++ b/first assignment.html
@@ -23,7 +23,7 @@
 <body class="open-sans-unique">
     <header class="banner-bg">
         <nav>
-            <h3 class="inter-nav-logo text-color">LOGO</h3>
+            <h3 class="inter-nav logo-style text-color">LOGO</h3>
             <ul>
                 <li><a href="button.com"><button class="Primary-btn">Sign up</button></a></li>
             </ul>
@@ -36,7 +36,37 @@
         </div>
     </header>
     <main>
+        <section class="extra-content">
+            <div class="extra-content-text">
+                    <h3 class="extra-content-title">
+                        See It in Action
+                    </h3>
+                    <p class="extra-content-discription">Explore the live preview and imagine your brand in this bold new look.</p>
+                    <a href="button.com"><button class="extra-content-btn Primary-btn">Lunch Live Preview</button></a>
+            </div>
+           <img class="extra-content-image" src="Assets/wc-mini.png" alt="">
+            
+        </section>
 
+        <section class="users">  <div class="users-panel-content">
+            <h4 class="users-title">Joined Thousands of Productive Users</h4>
+                <div class="users-content inter-nav">
+                  <div class="users-column">
+                    <h3 class="users-column-title">50K</h3>
+                    <h5 class="users-column-subtitle">Active Users</h5>
+                  </div>
+                  <div class="users-column">
+                    <h3 class="users-column-title">2M+</h3>
+                    <h5 class="users-column-subtitle">Focus Sessions</h5>
+                  </div>
+                  <div class="users-column">
+                    <h3 class="users-column-title">95%</h3>
+                    <h5 class="users-column-subtitle">Satisfaction Rate</h5>
+                  </div>
+                </div>
+            </div>
+            
+        </section>
     </main>
     <footer>
 
