--- a/first assignment.html
+++ b/first assignment.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="first assignment.css">
 </head>
 
-<body class="open-sans-unique">
+<body class="open-sans-unique bg-color">
     <header class="banner-bg">
         <nav>
             <h3 class="inter-nav logo-style text-color">LOGO</h3>
@@ -63,9 +63,29 @@
                     <h3 class="users-column-title">95%</h3>
                     <h5 class="users-column-subtitle">Satisfaction Rate</h5>
                   </div>
+                </div> 
+        </section>
+
+        <section class="form-section">
+            <div class="form-column">
+                <h2 class="form-title">Let's Get in Touch</h2>
+            </div>
+
+            <div class="form-column inter-nav">
+                <div class="form-input">
+                    <h4 class="inter-nav">Email</h4>
+                    <input type="email" name="" id="" placeholder="example@email.com">
+                </div>
+                <div class="form-input">
+                    <h4 class="inter-nav">Name</h4>
+                    <input type="text" name="" id="" placeholder="Full name"> 
+                </div>
+                <div class="form-input ">
+                    <h4 class="inter-nav">Message</h4>
+                    <textarea name="" id="" cols="30" rows="30" placeholder="write your message"></textarea>
+                    <button class="Primary-btn button2" type="submit">Get in Touch</button>
                 </div>
             </div>
-            
         </section>
     </main>
     <footer>
