my fifth commit

--- a/first assignment.html
+++ b/first assignment.html
@@ -88,8 +88,18 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer-content">
+            <section >
+                <h1 class="inter-nav">LOGO</h1>
+                <P class="logo-discription">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
+                
+            </section>
+            <div class="footer-nav">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">How it Works</a>
+                    <a href="">Services</a>
+                </div>
     </footer>
 </body>
 
